app/src/main/java/com/example/phone/utility/network/errors/DoesNotConvertToCrypto.java
package com.example.phone.utility.network.errors;

/**
 * Exception that is thrown if an endpoint does not convert to other cryptocurrencies
 */
final public class DoesNotConvertToCrypto extends Exception {
}
